# speedscope

./: .gitignore  package-lock.json  package.json
artifacts/perf/: cursor-orchestrator-summary.json  cursor-orchestrator-summary.md  experiment-summary.json  migration-delegation-summary.json  migration-status.json  recursive-migration-summary.json  recursive-migration-summary.md
docs/migration/: src-lib-analysis.md
docs/perf/: rust-migration-strategy.md  speedscope-browser-latency-report.md
rust/base64-decoder/: Cargo.toml
rust/callgrind-import/: Cargo.toml
rust/firefox-import/: Cargo.toml
rust/fuzzy-find/: Cargo.toml
rust/haskell-import/: Cargo.toml
rust/import-parsers/: Cargo.toml
rust/instruments-deep-copy/: Cargo.toml
rust/linux-perf/: Cargo.toml
rust/pprof-import/: Cargo.toml  build.rs
rust/pprof-import/pkg/: pprof_import.d.ts  pprof_import.js  pprof_import_bg.wasm  pprof_import_bg.wasm.d.ts
rust/pprof-import/src/: lib.rs
rust/profile-search/: Cargo.toml
rust/text-utils/: Cargo.toml
rust/trace-event-import/: Cargo.toml
rust/v8-cpu-formatter/: Cargo.toml
rust/v8-prof-log/: Cargo.toml
scripts/: build-rust-base64-decoder.sh  build-rust-callgrind-import.sh  build-rust-firefox-import.sh  build-rust-fuzzy-find.sh  build-rust-haskell-import.sh  build-rust-import-parsers.sh  build-rust-instruments-deep-copy.sh  build-rust-linux-perf.sh  build-rust-pprof-import.sh  build-rust-profile-search.sh  build-rust-text-utils.sh  build-rust-v8-cpu-formatter.sh  build-rust-v8-prof-log.sh  dev-server.ts  esbuild-shared.ts
src/: speedscope.tsx
(+186 files in other folders)
