[package]
name = "pprof-import"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = "0.13"
wasm-bindgen = "=0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = "s"
lto = true
